--- a/salesApp/Gemfile
+++ b/salesApp/Gemfile
@@ -13,6 +13,10 @@ gem 'responders'
 
 gem 'active_model_serializers'
 
+gem 'bower-rails'
+
+gem 'angular-rails-templates'
+
 gem 'devise'
 # Use postgresql as the database for Active Record
 gem 'pg', '~> 0.18'
