--- a/salesApp/bower.json
+++ b/salesApp/bower.json
@@ -5,7 +5,8 @@
       "angular": "v1.5.8",
       "angular-ui-router": "latest",
       "moment": "latest",
-      "bootstrap": "latest" 
+      "bootstrap": "latest",
+      "angular-devise": "latest" 
     }
   }
 }
