admin edit user working with modal

--- a/salesApp/bower.json
+++ b/salesApp/bower.json
@@ -6,7 +6,8 @@
       "angular-ui-router": "latest",
       "moment": "latest",
       "bootstrap": "latest",
-      "angular-devise": "latest" 
+      "angular-devise": "latest",
+      "angular-modal-service": "latest"
     }
   }
 }
