--- a/salesApp/Gemfile
+++ b/salesApp/Gemfile
@@ -20,6 +20,8 @@ gem 'bower-rails'
 gem 'angular-rails-templates'
 
 gem 'devise'
+
+gem 'figaro'
 # Use postgresql as the database for Active Record
 gem 'pg', '~> 0.18'
 # Use Puma as the app server
