--- a/salesApp/bower.json
+++ b/salesApp/bower.json
@@ -9,5 +9,8 @@
       "angular-devise": "latest",
       "angular-modal-service": "latest"
     }
+  }, 
+  "scripts": {
+    "postdeploy": "bundle exec rake db:migrate"
   }
 }
