--- a/salesApp/Gemfile
+++ b/salesApp/Gemfile
@@ -5,6 +5,10 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
+source "https://rails-assets.org" do
+  gem "rails-assets-angular-devise"
+end
+
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.3'
@@ -19,6 +23,7 @@ gem 'bower-rails'
 
 gem 'angularjs-rails'
 gem 'angular-rails-templates'
+gem 'angular-ui-router-rails'
 
 gem 'devise'
 
@@ -47,6 +52,8 @@ gem 'jbuilder', '~> 2.5'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+
+gem 'momentjs-rails'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
